<resources>
    <string name="app_name">MolloCurrencyConverter</string>
    <string name="convert">Convert</string>
    <string name="mid_market">Mid-market exchange rate at</string>
    <string name="rate_alert">Gets rate alert straight to your email inbox</string>

    <string name="sign">Sign up</string>
    <string name="cvt">Convert</string>
    <string name="cur1">EUR</string>
    <string name="cur2">PLN</string>
    <string name="sign_up">SignUp</string>
</resources>