<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:id="@+id/btn_convert"
        android:text="@string/convert"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:layout_marginTop="38dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:drawablePadding="12dp"
        android:gravity="bottom"
        android:id="@+id/time_label"
        android:drawableEnd="@drawable/ic_baseline_info_24"
        android:text="@string/mid_market"
        app:layout_constraintTop_toBottomOf="@id/btn_convert"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/graph_container"
        android:layout_marginTop="42dp"
        android:background="@drawable/graph_layout_background"
        app:layout_constraintTop_toBottomOf="@+id/time_label"
        app:layout_constraintBottom_toBottomOf="parent">
        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_30_days"
            android:text="Past 30 days"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginTop="48dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_90_days"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_90_days"
            android:text="Past 90 days"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textColor="@color/white3"
            android:layout_marginTop="48dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_30_days"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/rlt"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintTop_toBottomOf="@id/btn_30_days"
            app:layout_constraintBottom_toTopOf="@id/btn_rate">
            <com.jjoe64.graphview.GraphView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/graph" />
        </RelativeLayout>
        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_rate"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:text="@string/rate_alert"
            android:textSize="12sp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="28dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>